canvas alignment fixed

--- a/frontend/style/screen.css
+++ b/frontend/style/screen.css
@@ -188,8 +188,6 @@ td {
 
 #canvas {
     position: absolute;
-    left: 50px;
-    top: 20px;
     z-index: 20;
     pointer-events: none;
 }
